fix bugs
Signed-off-by: shuming.li <ming.moriarty@gmail.com>